--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.5.0
   provider: ^6.1.5+1
+  sqflite: ^2.4.2
+  sqflite_common_ffi_web: ^1.0.1+2
 
 dev_dependencies:
   flutter_test:
