--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.5+1
   sqflite: ^2.4.2
   sqflite_common_ffi_web: ^1.0.1+2
+  razorpay_web: ^3.0.0
 
 dev_dependencies:
   flutter_test:
